feat: revamping wip